--- a/src/components/styles/display.module.scss
+++ b/src/components/styles/display.module.scss
@@ -13,8 +13,7 @@
     margin: 0;
 }
 
-.icon img{
-    z-index: 1;
-    // width: 25px;
-    max-height: 100px;
+.icon {
+    width: 65px;
+    // max-height: 100px;
 }
