--- a/src/components/styles/display.module.scss
+++ b/src/components/styles/display.module.scss
@@ -1,7 +1,6 @@
 .container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .desktop {
@@ -14,6 +13,34 @@
 }
 
 .icon {
+    // border: black solid 2px;
+    padding: 1rem;
+    width:70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+}
+
+.icon a {
+    color: white;
+    text-shadow: 2px 2px black;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: .9rem;
+}
+
+.icon a:active {
+    background-color: rgb(71, 71, 255);
+    text-shadow: 0px 0px black;
+    padding: 0 .25rem;
+}
+
+.folder {
     width: 65px;
-    // max-height: 100px;
+}
+
+.nav-icons {
+    display: flex;
+    flex-direction: column;
 }
