--- a/src/components/styles/display.module.scss
+++ b/src/components/styles/display.module.scss
@@ -31,7 +31,7 @@
 }
 
 .icon a:active {
-    background-color: rgb(71, 71, 255);
+    background-color: #255fdc;
     text-shadow: 0px 0px black;
     padding: 0 .25rem;
 }
