--- a/src/components/styles/footer.module.scss
+++ b/src/components/styles/footer.module.scss
@@ -4,16 +4,17 @@
     position: fixed;
     overflow: hide;
     width: 100vw;
-    background-image: linear-gradient(rgb(131, 131, 247), rgb(13, 0, 255));
+    background-image: linear-gradient(0deg, #255fdc 90%, #3683f2);
     // background-color: blue;
 }
 
 .footer button{
     height: 3rem;
-    background-color: green;
+    background-image: linear-gradient(0deg, #259a25 80%, #125b2e);
     font-size: 1.45rem;
     font-family: 'MS Sans-serif', sans-serif;
     font-weight: 700;
+    text-shadow: 2px 2px black;
     color: white;
     padding-left: 2rem;
     padding-right: 1rem;
