--- a/src/components/styles/window.module.scss
+++ b/src/components/styles/window.module.scss
@@ -1,6 +1,7 @@
 .container {
-    width: 500px;
-    height: 500px;
+    margin-top: 2rem;
+    width: 65vw;
+    height: 80vh;
     background-color: white;
     z-index: 1;
     display: flex;
@@ -28,4 +29,15 @@
     height: 3rem;
     background-color: #f0f0e4;
     border-bottom: #d2d7d7 solid 2px;
+}
+
+.content {
+    display: flex;
+}
+
+.caption {
+    width: 20vw;
+    background-color: #79a1e9;
+    background-image: linear-gradient(0deg, #6376d5, #79a1e9);
+    height: 70vh;
 }
