--- a/src/components/styles/display.module.scss
+++ b/src/components/styles/display.module.scss
@@ -22,15 +22,16 @@
     align-items: flex-start;
 }
 
-.icon a {
+.icon p {
     color: white;
+    margin-top: 0;
     text-shadow: 2px 2px black;
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: .9rem;
 }
 
-.icon a:active {
+.icon p:active {
     background-color: #255fdc;
     text-shadow: 0px 0px black;
     padding: 0 .25rem;
