creates hide toggle for windows

--- a/src/components/styles/footer.module.scss
+++ b/src/components/styles/footer.module.scss
@@ -30,9 +30,8 @@
     border-radius: .25rem;
     border: solid #113990 2px;
     font-family: 'MS Sans-serif', sans-serif;
+    font-size: .9rem;
     margin: .1rem 2rem;
-    text-align: center;
-    vertical-align: middle;
 }
 
 .tab img {
