adds ternary style operators to footer tabs

--- a/src/components/styles/footer.module.scss
+++ b/src/components/styles/footer.module.scss
@@ -34,6 +34,17 @@
     margin: .1rem 2rem;
 }
 
+.max-tab {
+    background-color: red;
+    color: white;
+    padding: .5rem 6rem .5rem 1rem;
+    border-radius: .25rem;
+    border: solid #113990 2px;
+    font-family: 'MS Sans-serif', sans-serif;
+    font-size: .9rem;
+    margin: .1rem 2rem;
+}
+
 .tab img {
     max-width: 1.5rem;
 }
