--- a/src/components/styles/footer.module.scss
+++ b/src/components/styles/footer.module.scss
@@ -6,6 +6,7 @@
     width: 100vw;
     background-image: linear-gradient(0deg, #255fdc 90%, #3683f2);
     display: flex;
+    justify-content: flex-start;
 }
 
 .start {
@@ -20,29 +21,34 @@
     padding-right: 1rem;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    margin-right: 1rem;
 }
 
 .tab {
     background-color: #1b50b8;
     background-image: linear-gradient(45deg, #1b50b8, #2558c3);
     color: white;
-    padding: .5rem 6rem .5rem 1rem;
+    width: 8rem;
+    padding: .5rem 4rem .5rem 1rem;
     border-radius: .25rem;
     border: solid #113990 2px;
+    box-shadow: 2px 2px 2px #113990;
     font-family: 'MS Sans-serif', sans-serif;
     font-size: .9rem;
-    margin: .1rem 2rem;
+    margin: .1rem;
 }
 
 .max-tab {
-    background-color: red;
+    background-color: #397ff5;
+    background-image: linear-gradient(45deg, #67a7f9, #397ff5);
     color: white;
-    padding: .5rem 6rem .5rem 1rem;
+    padding: .5rem 4rem .5rem 1rem;
     border-radius: .25rem;
-    border: solid #113990 2px;
+    box-shadow: 2px 2px 2px #113990;
     font-family: 'MS Sans-serif', sans-serif;
     font-size: .9rem;
-    margin: .1rem 2rem;
+    margin: .1rem;
+    width: 8rem;
 }
 
 .tab img {
