--- a/src/components/styles/footer.module.scss
+++ b/src/components/styles/footer.module.scss
@@ -58,3 +58,18 @@
 .max-tab img {
     max-width: 1.5rem;
 }
+
+.clock {
+    color: white;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    background-color: #3dceeb;
+    background-image: linear-gradient(0deg, #1384ea, #0261bb 90%, #3dceeb);
+    border-left: #3dceeb solid 3px;
+    padding: 1rem;
+    padding-left: 10rem;
+    margin: 0;
+    font-family: 'MS Sans-serif', sans-serif;
+    font-size: .85rem;
+}
