--- a/src/components/styles/window.module.scss
+++ b/src/components/styles/window.module.scss
@@ -59,7 +59,20 @@
 }
 
 .content {
+    position: relative;
+    padding-bottom: 7rem;
     display: flex;
+    // width: 100%;
+    overflow-x: auto;
+}
+
+.content img {
+    height: 8vh;
+    margin: .5rem;
+}
+
+.content img:hover {
+    cursor: pointer;
 }
 
 .caption {
@@ -80,5 +93,11 @@
     margin-right: .5rem;
     font-family: 'MS Sans-serif', sans-serif;
     font-size: .9rem;
+}
+
+.button {
+    outline: none;
+    border: none;
+    background-color: #F9F8F8;
 }
 
