--- a/src/components/styles/display.module.scss
+++ b/src/components/styles/display.module.scss
@@ -1,51 +1,53 @@
 .container {
-    display: flex;
-    justify-content: flex-start;
+  display: flex;
+  justify-content: flex-start;
+  height: 100vh;
+  width: 100vw;
 }
 
 .desktop {
-    z-index: -2;
-    width: 100vw;
-    overflow: auto;
-    position: fixed;
-    top: 0;
-    margin: 0;
+  z-index: -2;
+  width: 100vw;
+  overflow: auto;
+  position: fixed;
+  top: 0;
+  margin: 0;
 }
 
 .icon {
-    padding: 1rem;
-    width:100px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
+  padding: 1rem;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .icon p {
-    color: white;
-    margin-top: 0;
-    text-shadow: 2px 2px black;
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: .9rem;
-    cursor: pointer;
+  color: white;
+  margin-top: 0;
+  text-shadow: 2px 2px black;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.9rem;
+  cursor: pointer;
 }
 
 .icon p:active {
-    background-color: #255fdc;
-    text-shadow: 0px 0px black;
-    padding: 0 .25rem;
+  background-color: #255fdc;
+  text-shadow: 0px 0px black;
+  padding: 0 0.25rem;
 }
 
 .folder {
-    width: 65px;
+  width: 65px;
 }
 
 .recycle {
-    width: 55px;
+  width: 55px;
 }
 
 .nav-icons {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
