--- a/src/components/styles/display.module.scss
+++ b/src/components/styles/display.module.scss
@@ -15,12 +15,24 @@
 }
 
 .icon {
-  padding: 1rem;
+  background-color: rgba($color: #255fdc, $alpha: 0);
+  border: none;
+  // padding: 1rem;
+  margin: 1rem;
   width: 100px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
+}
+
+.icon:focus {
+  outline: 0;
+}
+
+.icon:active {
+  background-color: rgba($color: #255fdc, $alpha: 0.5);
+  border-radius: 10%;
 }
 
 .icon p {
