--- a/src/components/styles/footer.module.scss
+++ b/src/components/styles/footer.module.scss
@@ -39,11 +39,13 @@
 }
 
 .tab {
+  display: flex;
+  align-items: center;
   background-color: #1b50b8;
   background-image: linear-gradient(45deg, #1b50b8, #2558c3);
   color: white;
   width: 8rem;
-  padding: 0.5rem 4rem 0.5rem 1rem;
+  padding: 0.5rem 12rem 0.5rem 1rem;
   border-radius: 0.25rem;
   border: solid #113990 2px;
   box-shadow: 2px 2px 2px #113990;
@@ -53,10 +55,12 @@
 }
 
 .max-tab {
+  display: flex;
+  align-items: center;
   background-color: #397ff5;
   background-image: linear-gradient(45deg, #67a7f9, #397ff5);
   color: white;
-  padding: 0.5rem 4rem 0.5rem 1rem;
+  padding: 0.5rem 12rem 0.5rem 1rem;
   border-radius: 0.25rem;
   box-shadow: 2px 2px 2px #113990;
   font-family: "MS Sans-serif", sans-serif;
@@ -67,10 +71,12 @@
 
 .tab img {
   max-width: 1.5rem;
+  margin-right: 0.5rem;
 }
 
 .max-tab img {
   max-width: 1.5rem;
+  margin-right: 0.5rem;
 }
 
 .clock {
