--- a/src/styles/caption.module.scss
+++ b/src/styles/caption.module.scss
@@ -2,11 +2,10 @@
   z-index: 10;
   position: fixed;
   left: 0;
-  top: 9%;
-  width: 20vw;
+  width: 30%;
   background-color: #79a1e9;
   background-image: linear-gradient(0deg, #6376d5, #79a1e9);
-  height: 89%;
+  height: 75%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,13 +28,13 @@
   font-family: "MS Sans-serif", sans-serif;
   font-size: 0.9rem;
   font-weight: 900;
-  padding-left: 1rem;
-  max-height: 1.5rem;
+  padding: 0rem 1rem;
   display: flex;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   align-items: center;
   border-bottom: #d2d7d7 solid 2px;
+  height: max-content;
 }
 
 .panheader i {
