--- a/src/styles/window.module.scss
+++ b/src/styles/window.module.scss
@@ -1,7 +1,7 @@
 .container {
   margin-top: 2rem;
-  width: 65vw;
-  height: 80vh;
+  width: 65%;
+  height: 80%;
   background-color: white;
   z-index: 1;
   display: flex;
