Fixes z-index and window display order issues

--- a/src/styles/gallery.module.scss
+++ b/src/styles/gallery.module.scss
@@ -1,9 +1,9 @@
 .gallery {
   position: absolute;
   bottom: 0;
-  // left: 20vw;
   display: flex;
   overflow-x: auto;
+  z-index: 10;
 }
 
 .gallery button:hover {
