--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -10,12 +10,6 @@
   justify-content: flex-start;
 }
 
-.footer button:active {
-  background-color: #125b2e;
-  background-image: none;
-  box-shadow: none;
-}
-
 .footer button:focus {
   outline: 0;
 }
@@ -37,6 +31,12 @@
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
   margin-right: 1rem;
+}
+
+.start:active {
+  background-color: #125b2e;
+  background-image: none;
+  box-shadow: none;
 }
 
 .tab {
