--- a/src/styles/gallery.module.scss
+++ b/src/styles/gallery.module.scss
@@ -1,5 +1,6 @@
 .gallery {
   position: absolute;
+  width: 100%;
   bottom: 0;
   display: flex;
   overflow-x: auto;
@@ -15,7 +16,7 @@
 }
 
 .gallery img {
-  height: 8vh;
+  height: 5rem;
   margin: 0.5rem;
 }
 
