--- a/src/styles/start.module.scss
+++ b/src/styles/start.module.scss
@@ -1,10 +1,11 @@
 .container {
+  box-sizing: border-box;
   font-family: "MS Sans-serif", sans-serif;
   z-index: 15;
   display: flex;
   flex-direction: column;
   height: 60vh;
-  width: 45vw;
+  width: 50vw;
   background-color: white;
   position: fixed;
   left: 0;
@@ -13,6 +14,16 @@
   border: solid #255fdc 2px;
   border-top: solid #6bb1ef 4px;
   box-shadow: 2px 2px 2px #00168f;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 132px;
+  z-index: 14;
+  background-color: red;
+  height: 100vh;
+  width: calc(100vw - 132px);
 }
 
 .header {
@@ -49,6 +60,9 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .footer button {
@@ -112,9 +126,9 @@
 }
 
 .content {
+  box-sizing: border-box;
   display: flex;
-  justify-content: center;
-  height: 100%;
+  height: calc(100% - 5rem);
 }
 
 .blue {
@@ -154,33 +168,62 @@
 }
 
 .white {
+  box-sizing: border-box;
   background-color: white;
-  height: 100%;
+  height: calc(100% - 3rem);
   width: 65%;
   padding: .75rem;
+  overflow-y: auto;
 }
 
 .white p {
-  padding: 0.25rem 0.5rem;
-  line-height: 125%;
+  margin: 0;
+  padding: 0.25rem 0.5rem .75rem;
+  line-height: 150%;
 }
 
 
 @media (max-width: 650px) {
   .container {
     width: 100vw;
-    height: 85vh;
+    height: calc(100vh - 3rem);
+    border-radius: 0;
+  }
+
+  .footer {
+    display: none;
+  }
+  .content {
+    flex-direction: column;
   }
 
   .blue {
-    width: 30%;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    position: absolute;
+    bottom: 3rem;
+    height: 3rem;
   }
 
   .white {
-    width: 70%;
+    width: 100%;
+    max-height: calc(100% - 3rem);
+    overflow-y: scroll;
+  }
+
+  .blue {
+    bottom: 0;
   }
 
   .blue img {
     display: none;
+  }
+
+  .blue button {
+    margin: .25rem 0rem;
+    border-radius: 1rem;
+    padding: 1rem;
+    width: unset;
   }
 }
