--- a/src/styles/window.module.scss
+++ b/src/styles/window.module.scss
@@ -1,9 +1,12 @@
 .container {
+  position: fixed;
+  top: 30px;
+  left: 100px;
   margin-top: 2rem;
   width: 65%;
   height: 80%;
   background-color: white;
-  z-index: 1;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   border-radius: 5px;
@@ -103,4 +106,25 @@
   margin-right: 0.5rem;
   font-family: "MS Sans-serif", sans-serif;
   font-size: 0.9rem;
+}
+
+@media (max-width: 650px) {
+  .container {
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: calc(100vh - 3rem);
+    margin: 0;
+  }
+
+  .tool-bar {
+    height: unset;
+  }
+
+  .tool-bar ul {
+    margin: 0.25rem;
+  }
+  
+
 }
