--- a/src/styles/window.module.scss
+++ b/src/styles/window.module.scss
@@ -111,10 +111,10 @@
 @media (max-width: 650px) {
   .container {
     box-sizing: border-box;
-    top: 0;
+    top: 3rem;
     left: 0;
     width: 100vw;
-    height: calc(100vh - 3rem);
+    height: calc(90vh - 3rem);
     margin: 0;
   }
 
