--- a/src/styles/window.module.scss
+++ b/src/styles/window.module.scss
@@ -1,8 +1,6 @@
 .container {
   position: fixed;
-  top: 30px;
-  left: 100px;
-  margin-top: 2rem;
+  left: 0;
   width: 65%;
   height: 80%;
   background-color: white;
