--- a/src/styles/BigImage.module.scss
+++ b/src/styles/BigImage.module.scss
@@ -76,8 +76,8 @@
   margin: 0.5rem;
   border-radius: 50%;
   background-color: #0254e4;
-  font-size: 2rem;
-  padding: 0.4rem 1rem;
+  font-size: 1.5rem;
+  padding: 0.4rem .75rem;
   font-weight: 900;
   color: #f9f8f8;
   box-shadow: 2px 2px 2px #00168f;
@@ -106,7 +106,7 @@
 
   .imgnavzoomed {
     position: absolute;
-    bottom: 10rem;
+    bottom: 9rem;
   }
 
   .imgnav {
